# TP_TOP

./: README.md
matrix-product/: CMakeLists.txt  README.md  cache_bloc.py  final_perf.py  plot.py  results_threads_blocks.csv  rightvleft.py  strong_scalling.py
matrix-product/src/: CMakeLists.txt  main.cpp  matrix_product.hpp  matrix_product_impl.hpp  test_validation.cpp
mesh/: CMakeLists.txt
mesh/src/: CMakeLists.txt  main.cpp
